--- a/apicall/src/App.css
+++ b/apicall/src/App.css
@@ -12,3 +12,13 @@
   display: flex;
   flex-direction: column;
 }
+
+.imageList {
+  columns: 250px 5;
+  column-gap: 10px;
+}
+
+.imageListItems {
+  width: 100%;
+  margin-bottom: 10px;
+}
